# ai-agents

./: .gitignore  Makefile  README.md  env-sample  pyproject.toml
app/chainlit/: main_ford.py
notebooks/: llm_clients.ipynb
terraform/base/: backend.tf  main.tf  preprod.tfvars  variables.tf
