[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-cloud-aiplatform>=1.95.1",
    "grandalf>=0.8",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "nbautoexport>=0.5.2",
    "pytest>=8.3.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-git-authors-plugin>=0.9.5",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-video>=1.5.0",
    "mkdocstrings>=0.29.1",
    "pymdown-extensions>=10.15",
]
